# iced-2048

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  game.rs  main.rs  tile.rs
