[package]
name = "iced-2048"
description = "2048 game developed in iced rust"
version = "0.1.0"
edition = "2021"
authors = ["Chetan Khilosiya <chetan.khilosiya@gmail.com>"]
rust-version = "1.75"
readme = "README.md"
repository = "https://github.com/chetankhilosiya/iced-2048"
license = "MIT"
keywords = ["2048", "game", "iced"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.10.0"
